--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -3,14 +3,11 @@
 </MudElement>
 
 @code {
-    [Parameter]
-    public Country Code { get; set; }
+    [Parameter] public Country Code { get; set; }
 
-    [Parameter]
-    public FlagSize Size { get; set; } = FlagSize.Normal;
+    [Parameter] public FlagSize Size { get; set; } = FlagSize.Normal;
 
-    [Parameter]
-    public string Class { get; set; } = string.Empty;
+    [Parameter] public string Class { get; set; } = string.Empty;
 
     private string flagSize
     {
