--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -112,7 +112,7 @@
                     <HeaderContent>
                         <MudTh Class="number-col">#</MudTh>
                         <MudTh Class="accent-cell"></MudTh>
-                        <MudTh>Driver</MudTh>
+                            <MudTh Style="max-width: 225px">Driver</MudTh>
                         <MudTh Class="number-col">No.</MudTh>
                         <MudTh>Team</MudTh>
                         <MudTh>PTS</MudTh>
@@ -131,9 +131,9 @@
                         <MudTd Class="accent-cell">
                             <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
                         </MudTd>
-                        <MudTd>
-                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                                <MudText>@context.Name</MudText>
+                        <MudTd Style="max-width: 225px">
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center" Style="max-width: 225px">
+                                <MudText Class="overflow-hider">@context.Name</MudText>
                                 <MudSpacer />
                                 <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                             </MudStack>
@@ -201,7 +201,7 @@
                     </MudTd>
                     <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                            <MudText Typo="Typo.body1">@context.Name</MudText>
+                            <MudText Typo="Typo.body1" Class="overflow-hider">@context.Name</MudText>
                             <MudSpacer />
                             <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                         </MudStack>
