--- a/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
@@ -21,7 +21,7 @@
                         <MudChipSet @bind-SelectedValues="selectedTraits" MultiSelection="true" Filter="true">
                             @foreach (var trait in selectableTraits)
                             {
-                                <MudChip Text="@trait.Name" Value="@trait.Id"></MudChip>
+                                <MudChip Text="@trait.Name" Value="@trait.Id" Color="Color.Primary"></MudChip>
                             }
                         </MudChipSet>
                     </MudPaper>
