--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -63,7 +63,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         @foreach (var modifier in context.Item.RetrieveNotZeroValues())
                         {
-                            <MudPaper Class="pa-2">
+                            <MudPaper Elevation="15" Class="px-4 py-2">
                                 <MudText Typo="Typo.caption">
                                     @(modifier.Key): @(modifier.Value)
                                 </MudText>
