--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -11,7 +11,7 @@
                 <MudStack>
                     <MudText Typo="Typo.h6">Settings</MudText>
                     <MudDivider />
-                    <div>
+                    <MudStack Spacing="0">
                         <MudTooltip Text="For whom the development is run">
                             <MudText Typo="Typo.subtitle1">Entrant</MudText>
                         </MudTooltip>
@@ -20,48 +20,51 @@
                             <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
                             <MudChip Color="Color.Primary" Value="Entrant.Engine">Engine</MudChip>
                         </MudChipSet>
-                    </div>
-                    <div>
+                    </MudStack>
+
+                    <MudStack Spacing="0">
                         <MudTooltip Text="Which aspect is going to be developed">
                             <MudText Typo="Typo.subtitle1">Target</MudText>
                         </MudTooltip>
                         <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true">
-                            <MudChip Color="Color.Tertiary" Value="Aspect.Skill" Default="true">@_mainTypeName</MudChip>
-                            <MudChip Color="Color.Tertiary" Value="Aspect.Reliability">Reliability</MudChip>
+                            <MudChip Color="Color.Secondary" Value="Aspect.Skill" Default="true">@_mainTypeName</MudChip>
+                            <MudChip Color="Color.Secondary" Value="Aspect.Reliability">Reliability</MudChip>
+                            
                             @if (_activeEntrant == Entrant.Team)
                             {
-                                <MudChip Color="Color.Tertiary" Value="Aspect.Aero">Aero</MudChip>
-                                <MudChip Color="Color.Tertiary" Value="Aspect.Chassis">Chassis</MudChip>
-                                <MudChip Color="Color.Tertiary" Value="Aspect.Powertrain">Powertrain</MudChip>
+                                <MudChip Color="Color.Secondary" Value="Aspect.Aero">Aero</MudChip>
+                                <MudChip Color="Color.Secondary" Value="Aspect.Chassis">Chassis</MudChip>
+                                <MudChip Color="Color.Secondary" Value="Aspect.Powertrain">Powertrain</MudChip>
                             }
                             else if (_activeEntrant == Entrant.Driver)
                             {
-                                <MudChip Color="Color.Tertiary" Value="Aspect.Attack">Attack</MudChip>
-                                <MudChip Color="Color.Tertiary" Value="Aspect.Defense">Defense</MudChip>
+                                <MudChip Color="Color.Secondary" Value="Aspect.Attack">Attack</MudChip>
+                                <MudChip Color="Color.Secondary" Value="Aspect.Defense">Defense</MudChip>
                             }
                         </MudChipSet>
-                    </div>
-                    <div>
+                    </MudStack>
+
+                    <MudStack Spacing="0">
                         <MudTooltip Text="How the development ranges are determined">
                             <MudText Typo="Typo.subtitle1">Type</MudText>
                         </MudTooltip>
                         <MudChipSet SelectedChipChanged="TypeChipChanged" Mandatory="true">
-                            <MudChip Color="Color.Secondary" Value="Quantifier.Range" Default="true">Range</MudChip>
+                            <MudChip Color="Color.Tertiary" Value="Quantifier.Range" Default="true">Range</MudChip>
                             @if (_selectedTarget == Aspect.Skill)
                             {
-                                <MudChip Color="Color.Secondary" Value="Quantifier.Set">Set</MudChip>
+                                <MudChip Color="Color.Tertiary" Value="Quantifier.Set">Set</MudChip>
                             }
-                            <MudChip Color="Color.Secondary" Value="Quantifier.Direct">Direct</MudChip>
+                            <MudChip Color="Color.Tertiary" Value="Quantifier.Direct">Direct</MudChip>
                         </MudChipSet>
-                    </div>
+                    </MudStack>
 
                     @if (_selectedType == Quantifier.Range)
                     {
-                        <div>
+                        <MudStack Spacing="0">
                             <MudText Typo="Typo.subtitle1">Development range</MudText>
                             <MudNumericField T="int" Label="Min" ValueChanged="ApplyMinRange" Class="field-sm" />
                             <MudNumericField T="int" Label="Max" ValueChanged="ApplyMaxRange" Class="field-sm" />
-                        </div>
+                        </MudStack>
                     }
 
                     @*<MudButton Variant="Variant.Filled"
@@ -86,14 +89,34 @@
                         </MudButtonGroup>
                     </ToolBarContent>
                     <HeaderContent>
-                        <MudTh>Name</MudTh>
+                        <MudTh>
+                            <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.Name)">
+                                Name
+                            </MudTableSortLabel>
+                        </MudTh>
                         @if (_optionalColTitle != null)
                         {
-                            <MudTh>@_optionalColTitle</MudTh>
+                            <MudTh>
+                                <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.Optional)">
+                                    @_optionalColTitle
+                                </MudTableSortLabel>
+                            </MudTh>
                         }
-                        <MudTh Class="number-col-lg">Old</MudTh>
-                        <MudTh Class="number-col-lg">Change</MudTh>
-                        <MudTh Class="number-col-lg">New</MudTh>
+                        <MudTh Class="number-col-lg">
+                            <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.Old)">
+                                Old
+                            </MudTableSortLabel>
+                        </MudTh>
+                        <MudTh Class="number-col-lg">
+                            <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.Change)">
+                                Change
+                            </MudTableSortLabel>
+                        </MudTh>
+                        <MudTh Class="number-col-lg">
+                            <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.New)">
+                                New
+                            </MudTableSortLabel>
+                        </MudTh>
                         <MudTh Style="min-width:225px">Range</MudTh>
                     </HeaderContent>
                     <RowTemplate>
@@ -126,8 +149,16 @@
                         </MudTd>
                         <MudTd>
                             <MudStack Row="true" Class="pa-0">
-                                <MudNumericField T="int" @bind-Value="@context.Min" Label="Min" ReadOnly="@(_selectedType != Quantifier.Direct)" Class="field-xs" />
-                                <MudNumericField T="int" @bind-Value="@context.Max" Label="Max" ReadOnly="@(_selectedType != Quantifier.Direct)" Class="field-xs" />
+                                <MudNumericField T="int"
+                                                 @bind-Value="@context.Min"
+                                                 Label="Min"
+                                                 ReadOnly="@(_selectedType != Quantifier.Direct)"
+                                                 Class="field-xs" />
+                                <MudNumericField T="int"
+                                                 @bind-Value="@context.Max"
+                                                 Label="Max"
+                                                 ReadOnly="@(_selectedType != Quantifier.Direct)"
+                                                 Class="field-xs" />
                             </MudStack>
                         </MudTd>
                     </RowTemplate>
@@ -171,13 +202,12 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public Season Season { get; set; }
+    [CascadingParameter] public Season Season { get; set; }
 
     League League;
-    List<SeasonDriver> SeasonDrivers;
-    List<SeasonTeam> SeasonTeams;
-    List<SeasonEngine> SeasonEngines;
+    List<SeasonDriver>? SeasonDrivers;
+    List<SeasonTeam>? SeasonTeams;
+    List<SeasonEngine>? SeasonEngines;
     List<DevelopedEntrant> DevelopedEntrants;
 
     Entrant _activeEntrant = Entrant.Driver;
@@ -195,29 +225,36 @@
     protected override async Task OnInitializedAsync()
     {
         League = await LeagueService.GetLeagueById(Season.LeagueId);
-        SeasonDrivers = await EntrantService.GetSeasonDrivers(Season.Id);
-        SeasonTeams = await EntrantService.GetSeasonTeams(Season.Id);
-        SeasonEngines = await EntrantService.GetSeasonEngines(Season.Id);
 
-        DevelopDrivers();
+        await ReloadDeveloped(Entrant.Driver);
     }
 
-    void ReloadDeveloped(Entrant entrant)
+    async Task ReloadDeveloped(Entrant entrant)
     {
         switch (entrant)
         {
-            case Entrant.Driver: DevelopDrivers(); break;
-            case Entrant.Team: DevelopTeams(); break;
-            case Entrant.Engine: DevelopEngines(); break;
-            default: throw new InvalidOperationException("wtf unexpected entrant added to develop?");
+            case Entrant.Driver:
+                await DevelopDrivers();
+                break;
+            case Entrant.Team:
+                await DevelopTeams();
+                break;
+            case Entrant.Engine:
+                await DevelopEngines();
+                break;
+            default:
+                throw new InvalidOperationException("wtf unexpected entrant added to develop? (how)");
         }
 
         _activeEntrant = entrant;
         _ranDevelop = false;
     }
 
-    void DevelopDrivers()
+    async Task DevelopDrivers()
     {
+        if (SeasonDrivers == null)
+            SeasonDrivers = await EntrantService.GetSeasonDrivers(Season.Id);
+
         DevelopedEntrants = SeasonDrivers.Select(e =>
             new DevelopedEntrant
                 {
@@ -233,8 +270,11 @@
         _optionalColTitle = "Age";
     }
 
-    void DevelopTeams()
+    async Task DevelopTeams()
     {
+        if (SeasonTeams == null)
+            SeasonTeams = await EntrantService.GetSeasonTeams(Season.Id);
+
         DevelopedEntrants = SeasonTeams.Select(e =>
             new DevelopedEntrant
             {
@@ -250,8 +290,11 @@
         _optionalColTitle = null;
     }
 
-    void DevelopEngines()
+    async Task DevelopEngines()
     {
+        if (SeasonEngines == null)
+            SeasonEngines = await EntrantService.GetSeasonEngines(Season.Id);
+
         DevelopedEntrants = SeasonEngines.Select(e =>
             new DevelopedEntrant
                 {
@@ -286,50 +329,52 @@
         _ => throw new InvalidOperationException("Somehow neither of the 5 possible develops"),
     };
 
-    void EntrantChipChanged(MudChip? entrantChip)
+    async Task EntrantChipChanged(MudChip? entrantChip)
     {
-        if (entrantChip != null)
-        {
-            if (_activeEntrant == Entrant.Team &&
-                (_selectedTarget == Aspect.Aero
+        if (entrantChip == null)
+            return;
+
+        if (_activeEntrant == Entrant.Team
+                && (_selectedTarget == Aspect.Aero
                     || _selectedTarget == Aspect.Chassis
                         || _selectedTarget == Aspect.Powertrain))
-                _selectedTarget = Aspect.Skill;
-            else if (_activeEntrant == Entrant.Driver &&
-                (_selectedTarget == Aspect.Attack
-                    || _selectedTarget == Aspect.Defense))
-                _selectedTarget = Aspect.Skill;
+            _selectedTarget = Aspect.Skill;
+        else if (_activeEntrant == Entrant.Driver
+            && (_selectedTarget == Aspect.Attack
+                || _selectedTarget == Aspect.Defense))
+            _selectedTarget = Aspect.Skill;
 
-            _activeEntrant = (Entrant)entrantChip.Value;
+        _activeEntrant = (Entrant)entrantChip.Value;
 
-            ReloadDeveloped(_activeEntrant);
-            ApplyCommon();
-        }
+        await ReloadDeveloped(_activeEntrant);
+        ApplyCommon();
     }
 
     void TypeChipChanged(MudChip? typeChip)
     {
-        if (typeChip != null)
-        {
-            _selectedType = (Quantifier)typeChip.Value;
-            ApplyCommon();
-        }
+        if (typeChip == null)
+            return;
+
+        _selectedType = (Quantifier)typeChip.Value;
+        ApplyCommon();
     }
 
-    void TargetChipChanged(MudChip? devChip)
+    async Task TargetChipChanged(MudChip? devChip)
     {
-        if (devChip != null)
-        {
-            _selectedTarget = (Aspect)devChip.Value;
-            ReloadDeveloped(_activeEntrant);
-            ApplyCommon();
-        }
+        if (devChip == null)
+            return;
+
+        _selectedTarget = (Aspect)devChip.Value;
+        await ReloadDeveloped(_activeEntrant);
+        ApplyCommon();
     }
 
     void ApplyCommon()
     {
         if (_selectedType == Quantifier.Set && _selectedTarget == Aspect.Skill)
+        {
             ApplyDefaultRanges();
+        }
         else if (_selectedType == Quantifier.Range && currentMin != currentMax)
         {
             ApplyMinRange(currentMin);
@@ -347,28 +392,14 @@
             switch (_activeEntrant)
             {
                 case Entrant.Driver:
-                    {
-                        setCompareRange = League.DevelopmentRanges
-                                            .Where(e => e.Type == Aspect.Skill)
-                                            .OrderBy(e => e.Comparer)
-                                            .ToList();
-                        additionalCompareRange = League.DevelopmentRanges
-                                                    .Where(e => e.Type == Aspect.Age)
-                                                    .OrderBy(e => e.Comparer)
-                                                    .ToList();
-                    }
+                    setCompareRange = League.DevelopmentRanges.GetAspectRanges(Aspect.Skill);
+                    additionalCompareRange = League.DevelopmentRanges.GetAspectRanges(Aspect.Age);
                     break;
                 case Entrant.Team:
-                    setCompareRange = League.DevelopmentRanges
-                                        .Where(e => e.Type == Aspect.BaseCar)
-                                        .OrderBy(e => e.Comparer)
-                                        .ToList();
+                    setCompareRange = League.DevelopmentRanges.GetAspectRanges(Aspect.BaseCar);
                     break;
                 case Entrant.Engine:
-                    setCompareRange = League.DevelopmentRanges
-                                        .Where(e => e.Type == Aspect.Engine)
-                                        .OrderBy(e => e.Comparer)
-                                        .ToList();
+                    setCompareRange = League.DevelopmentRanges.GetAspectRanges(Aspect.Engine);
                     break;
                 default:
                     throw new InvalidOperationException("Unrecognized entrant");
@@ -384,9 +415,7 @@
                     var matchRange = setCompareRange.FirstOrDefault(e => e.Comparer >= entrant.Old);
 
                     if (matchRange == null)
-                    {
                         matchRange = setCompareRange[setCompareRange.Count - 1];
-                    }
 
                     min = matchRange.Minimum;
                     max = matchRange.Maximum;
